Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4118

CID 1347871: Memory - illegal accesses in RegressionHPACK.cc

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.0
    • HTTP/2

    Description

      *** CID 1347871:  Memory - illegal accesses  (NEGATIVE_RETURNS)
      /proxy/http2/RegressionHPACK.cc: 428 in RegressionTest_HPACK_Encode(RegressionTest *, int, int *)()
      422         uint64_t buf_len = BUFSIZE_FOR_REGRESSION_TEST;
      423         int64_t len = http2_write_psuedo_headers(headers, buf, buf_len, indexing_table);
      424         buf_len -= len;
      425     
      426         MIMEFieldIter field_iter;
      427         bool cont = false;
         CID 1347871:  Memory - illegal accesses  (NEGATIVE_RETURNS)
         Using variable "len" as an index to array "buf".
      428         len += http2_write_header_fragment(headers, field_iter, buf + len, buf_len, indexing_table, cont);
      429     
      430         box.check(len == encoded_field_response_test_case[i].encoded_field_len, "encoded length was %" PRId64 ", expecting %d", len,
      431                   encoded_field_response_test_case[i].encoded_field_len);
      432         box.check(len > 0 && memcmp(buf, encoded_field_response_test_case[i].encoded_field, len) == 0, "encoded value was invalid");
      433  
      

      Attachments

        Activity

          People

            masaori Masaori Koshiba
            masaori Masaori Koshiba
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: