TS-4118: CID 1347871: Add error handling in HPACK_Encode

(cherry picked from commit 96b4d52015549e211d1b2ee9d5c773f18f408153)